// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`DevTools component > should open by clicking the floating button 1`] = `
<body>
  <div
    class="ProseMirror"
    contenteditable="true"
    id="pm-editor"
    translate="no"
  >
    <p>
      <br
        class="ProseMirror-trailingBreak"
      />
    </p>
  </div>
  <div>
    <section
      class="dev-tools s-DevTools-1sw281g"
    >
      <div
        class="floating-dock-wrapper s-FloatingDock-1r7iqvk"
      >
        <div
          class="paste-modal s-PasteModal-tijufv hidden"
        >
          <div
            class="modal-bg s-PasteModal-tijufv"
          />
           
          <form
            class="paste-content s-PasteModal-tijufv"
          >
            <fieldset
              class="s-PasteModal-tijufv"
            >
              <div
                class="submit-container s-PasteModal-tijufv"
              >
                <button
                  class="s-PasteModal-tijufv"
                >
                  Submit
                </button>
              </div>
               
              <legend
                class="s-PasteModal-tijufv"
              >
                Doc
              </legend>
               
              <textarea
                class="s-PasteModal-tijufv"
              />
            </fieldset>
          </form>
        </div>
        <!---->
         
        <div
          class="floating-dock s-FloatingDock-1r7iqvk"
          style="top: 50%; height: 50%;"
        >
          <div
            class="resizing-div s-FloatingDock-1r7iqvk"
            role="button"
            tabindex="-1"
          />
           
          <div
            class="floating-dock-body s-FloatingDock-1r7iqvk"
          >
            <div>
              <button
                class="copy-btn s-FloatingDock-1r7iqvk"
              >
                Copy
              </button>
               
              <button
                class="save-btn s-FloatingDock-1r7iqvk"
              >
                Save
              </button>
               
              <button
                class="import-btn s-FloatingDock-1r7iqvk"
              >
                Import
              </button>
               
              <button
                class="paste-btn s-FloatingDock-1r7iqvk"
              >
                Paste
              </button>
               
              <button
                aria-label="Close dev-toolkit"
                class="close-btn s-FloatingDock-1r7iqvk"
              >
                X
              </button>
            </div>
             
            <input
              accept=".json"
              multiple=""
              style="display:none"
              type="file"
            />
             
            <ul
              class="tabs-menu s-TabsMenu-mpb9d"
            >
              <li>
                <button
                  class="s-TabsMenu-mpb9d"
                >
                  STATE
                </button>
              </li>
               
              <li>
                <button
                  class="s-TabsMenu-mpb9d"
                >
                  HISTORY
                </button>
              </li>
               
              <li>
                <button
                  class="s-TabsMenu-mpb9d"
                >
                  PLUGINS
                </button>
              </li>
               
              <li>
                <button
                  class="s-TabsMenu-mpb9d"
                >
                  SCHEMA
                </button>
              </li>
               
              <li>
                <button
                  class="s-TabsMenu-mpb9d"
                >
                  STRUCTURE
                </button>
              </li>
               
              <li>
                <button
                  class="s-TabsMenu-mpb9d active"
                >
                  SNAPSHOTS
                </button>
              </li>
            </ul>
            <!---->
             
            <section
              class="split-view s-SplitView-19yuj8p"
            >
              <!---->
               
              <div
                class="right-panel s-SnapshotsTab-eg6x5x"
              >
                <div
                  class="no-snapshots s-SnapshotsTab-eg6x5x"
                >
                  Save snapshots by clicking "Save" button.
                </div>
                <!---->
              </div>
              <!---->
            </section>
            <!---->
          </div>
        </div>
      </div>
      <!---->
    </section>
    
    
  </div>
</body>
`;

exports[`DevTools component > should render 1`] = `
<body>
  <div
    class="ProseMirror"
    contenteditable="true"
    id="pm-editor"
    translate="no"
  >
    <p>
      <br
        class="ProseMirror-trailingBreak"
      />
    </p>
  </div>
  <div>
    <section
      class="dev-tools s-DevTools-1sw281g"
    >
      <div
        class="floating-dock-wrapper s-FloatingDock-1r7iqvk"
      >
        <div
          class="paste-modal s-PasteModal-tijufv hidden"
        >
          <div
            class="modal-bg s-PasteModal-tijufv"
          />
           
          <form
            class="paste-content s-PasteModal-tijufv"
          >
            <fieldset
              class="s-PasteModal-tijufv"
            >
              <div
                class="submit-container s-PasteModal-tijufv"
              >
                <button
                  class="s-PasteModal-tijufv"
                >
                  Submit
                </button>
              </div>
               
              <legend
                class="s-PasteModal-tijufv"
              >
                Doc
              </legend>
               
              <textarea
                class="s-PasteModal-tijufv"
              />
            </fieldset>
          </form>
        </div>
        <!---->
         
        <div
          class="floating-dock s-FloatingDock-1r7iqvk"
          style="top: 50%; height: 50%;"
        >
          <div
            class="resizing-div s-FloatingDock-1r7iqvk"
            role="button"
            tabindex="-1"
          />
           
          <div
            class="floating-dock-body s-FloatingDock-1r7iqvk"
          >
            <div>
              <button
                class="copy-btn s-FloatingDock-1r7iqvk"
              >
                Copy
              </button>
               
              <button
                class="save-btn s-FloatingDock-1r7iqvk"
              >
                Save
              </button>
               
              <button
                class="import-btn s-FloatingDock-1r7iqvk"
              >
                Import
              </button>
               
              <button
                class="paste-btn s-FloatingDock-1r7iqvk"
              >
                Paste
              </button>
               
              <button
                aria-label="Close dev-toolkit"
                class="close-btn s-FloatingDock-1r7iqvk"
              >
                X
              </button>
            </div>
             
            <input
              accept=".json"
              multiple=""
              style="display:none"
              type="file"
            />
             
            <ul
              class="tabs-menu s-TabsMenu-mpb9d"
            >
              <li>
                <button
                  class="s-TabsMenu-mpb9d active"
                >
                  STATE
                </button>
              </li>
               
              <li>
                <button
                  class="s-TabsMenu-mpb9d"
                >
                  HISTORY
                </button>
              </li>
               
              <li>
                <button
                  class="s-TabsMenu-mpb9d"
                >
                  PLUGINS
                </button>
              </li>
               
              <li>
                <button
                  class="s-TabsMenu-mpb9d"
                >
                  SCHEMA
                </button>
              </li>
               
              <li>
                <button
                  class="s-TabsMenu-mpb9d"
                >
                  STRUCTURE
                </button>
              </li>
               
              <li>
                <button
                  class="s-TabsMenu-mpb9d"
                >
                  SNAPSHOTS
                </button>
              </li>
            </ul>
            <!---->
             
            <section
              class="split-view s-SplitView-19yuj8p"
            >
              <div
                class="left-panel s-StateTab-y937re"
              >
                <div
                  class="top-row s-StateTab-y937re"
                >
                  <h2>
                    Current doc
                  </h2>
                   
                  <button
                    class="s-Button-3lf898"
                  >
                    log
                    <!---->
                  </button>
                  <!---->
                </div>
                 
                <ul
                  class="tree-view svelte-tree-view s-TreeView-167awo5"
                >
                  <li
                    class="row s-TreeViewNode-ngcjq5"
                    data-tree-id="[0]"
                  >
                    <!---->
                     
                    <div
                      class="node-key s-TreeViewNode-ngcjq5 p-left"
                      role="presentation"
                    >
                      type:
                    </div>
                     
                    <div
                      class="node-value s-TreeViewNode-ngcjq5"
                      data-type="string"
                      role="presentation"
                    >
                      "doc"
                      <!---->
                    </div>
                     
                    <div
                      class="buttons s-TreeViewNode-ngcjq5"
                    >
                      <button
                        class="log-copy-button s-TreeViewNode-ngcjq5"
                      >
                        log
                      </button>
                      <!---->
                       
                      <button
                        class="log-copy-button s-TreeViewNode-ngcjq5"
                      >
                        copy
                      </button>
                      <!---->
                    </div>
                  </li>
                   
                  <!---->
                  <li
                    class="row s-TreeViewNode-ngcjq5 collapsed"
                    data-tree-id="[1]"
                  >
                    <button
                      class="arrow-btn collapsed s-TreeViewNode-ngcjq5"
                    >
                      ▶
                    </button>
                    <!---->
                     
                    <div
                      class="node-key s-TreeViewNode-ngcjq5 has-children"
                      role="presentation"
                    >
                      content:
                    </div>
                     
                    <div
                      class="node-value s-TreeViewNode-ngcjq5 has-children"
                      data-type="array"
                      role="presentation"
                    >
                       [] 1 items
                      <!---->
                    </div>
                     
                    <div
                      class="buttons s-TreeViewNode-ngcjq5"
                    >
                      <button
                        class="log-copy-button s-TreeViewNode-ngcjq5"
                      >
                        log
                      </button>
                      <!---->
                       
                      <button
                        class="log-copy-button s-TreeViewNode-ngcjq5"
                      >
                        copy
                      </button>
                      <!---->
                    </div>
                  </li>
                   
                  <!---->
                  
                </ul>
                <!---->
              </div>
              <!---->
               
              <div
                class="right-panel s-StateTab-y937re"
              >
                <div
                  class="top-row s-StateTab-y937re"
                >
                  <h2>
                    Selection
                  </h2>
                   
                  <button
                    class="selection-btn s-Button-3lf898"
                  >
                    <span
                      class="caret-icon s-StateTab-y937re"
                    />
                    <!---->
                  </button>
                  <!---->
                </div>
                 
                <ul
                  class="tree-view svelte-tree-view s-TreeView-167awo5"
                >
                  <li
                    class="row s-TreeViewNode-ngcjq5"
                    data-tree-id="[0]"
                  >
                    <!---->
                     
                    <div
                      class="node-key s-TreeViewNode-ngcjq5 p-left"
                      role="presentation"
                    >
                      jsonID:
                    </div>
                     
                    <div
                      class="node-value s-TreeViewNode-ngcjq5"
                      data-type="string"
                      role="presentation"
                    >
                      "text"
                      <!---->
                    </div>
                     
                    <div
                      class="buttons s-TreeViewNode-ngcjq5"
                    >
                      <!---->
                       
                      <!---->
                    </div>
                  </li>
                   
                  <!---->
                  <li
                    class="row s-TreeViewNode-ngcjq5"
                    data-tree-id="[1]"
                  >
                    <!---->
                     
                    <div
                      class="node-key s-TreeViewNode-ngcjq5 p-left"
                      role="presentation"
                    >
                      empty:
                    </div>
                     
                    <div
                      class="node-value s-TreeViewNode-ngcjq5"
                      data-type="boolean"
                      role="presentation"
                    >
                      true
                      <!---->
                    </div>
                     
                    <div
                      class="buttons s-TreeViewNode-ngcjq5"
                    >
                      <!---->
                       
                      <!---->
                    </div>
                  </li>
                   
                  <!---->
                  <li
                    class="row s-TreeViewNode-ngcjq5"
                    data-tree-id="[2]"
                  >
                    <!---->
                     
                    <div
                      class="node-key s-TreeViewNode-ngcjq5 p-left"
                      role="presentation"
                    >
                      anchor:
                    </div>
                     
                    <div
                      class="node-value s-TreeViewNode-ngcjq5"
                      data-type="number"
                      role="presentation"
                    >
                      1
                      <!---->
                    </div>
                     
                    <div
                      class="buttons s-TreeViewNode-ngcjq5"
                    >
                      <!---->
                       
                      <!---->
                    </div>
                  </li>
                   
                  <!---->
                  <li
                    class="row s-TreeViewNode-ngcjq5"
                    data-tree-id="[3]"
                  >
                    <!---->
                     
                    <div
                      class="node-key s-TreeViewNode-ngcjq5 p-left"
                      role="presentation"
                    >
                      from:
                    </div>
                     
                    <div
                      class="node-value s-TreeViewNode-ngcjq5"
                      data-type="number"
                      role="presentation"
                    >
                      1
                      <!---->
                    </div>
                     
                    <div
                      class="buttons s-TreeViewNode-ngcjq5"
                    >
                      <!---->
                       
                      <!---->
                    </div>
                  </li>
                   
                  <!---->
                  <li
                    class="row s-TreeViewNode-ngcjq5"
                    data-tree-id="[4]"
                  >
                    <!---->
                     
                    <div
                      class="node-key s-TreeViewNode-ngcjq5 p-left"
                      role="presentation"
                    >
                      head:
                    </div>
                     
                    <div
                      class="node-value s-TreeViewNode-ngcjq5"
                      data-type="number"
                      role="presentation"
                    >
                      1
                      <!---->
                    </div>
                     
                    <div
                      class="buttons s-TreeViewNode-ngcjq5"
                    >
                      <!---->
                       
                      <!---->
                    </div>
                  </li>
                   
                  <!---->
                  <li
                    class="row s-TreeViewNode-ngcjq5"
                    data-tree-id="[5]"
                  >
                    <!---->
                     
                    <div
                      class="node-key s-TreeViewNode-ngcjq5 p-left"
                      role="presentation"
                    >
                      to:
                    </div>
                     
                    <div
                      class="node-value s-TreeViewNode-ngcjq5"
                      data-type="number"
                      role="presentation"
                    >
                      1
                      <!---->
                    </div>
                     
                    <div
                      class="buttons s-TreeViewNode-ngcjq5"
                    >
                      <!---->
                       
                      <!---->
                    </div>
                  </li>
                   
                  <!---->
                  
                </ul>
                <!---->
                 
                <div>
                  <h2>
                    Active marks
                  </h2>
                   
                  <div
                    class="no-marks s-StateTab-y937re"
                  >
                    No active marks
                  </div>
                  <!---->
                </div>
                 
                <div>
                  <h2>
                    Document stats
                  </h2>
                   
                  <ul
                    class="tree-view svelte-tree-view s-TreeView-167awo5"
                  >
                    <li
                      class="row s-TreeViewNode-ngcjq5"
                      data-tree-id="[0]"
                    >
                      <!---->
                       
                      <div
                        class="node-key s-TreeViewNode-ngcjq5 p-left"
                        role="presentation"
                      >
                        nodeSize:
                      </div>
                       
                      <div
                        class="node-value s-TreeViewNode-ngcjq5"
                        data-type="number"
                        role="presentation"
                      >
                        4
                        <!---->
                      </div>
                       
                      <div
                        class="buttons s-TreeViewNode-ngcjq5"
                      >
                        <!---->
                         
                        <!---->
                      </div>
                    </li>
                     
                    <!---->
                    <li
                      class="row s-TreeViewNode-ngcjq5"
                      data-tree-id="[1]"
                    >
                      <!---->
                       
                      <div
                        class="node-key s-TreeViewNode-ngcjq5 p-left"
                        role="presentation"
                      >
                        childCount:
                      </div>
                       
                      <div
                        class="node-value s-TreeViewNode-ngcjq5"
                        data-type="number"
                        role="presentation"
                      >
                        1
                        <!---->
                      </div>
                       
                      <div
                        class="buttons s-TreeViewNode-ngcjq5"
                      >
                        <!---->
                         
                        <!---->
                      </div>
                    </li>
                     
                    <!---->
                    
                  </ul>
                  <!---->
                </div>
              </div>
              <!---->
            </section>
            <!---->
          </div>
        </div>
      </div>
      <!---->
    </section>
    
    
  </div>
</body>
`;
